src/objects/SBQQ__ProductFeature__c.object
<CustomObject>
    <fields>
        <fullName>ConfiguredSKUExternalId__c</fullName>
        <formula>SBQQ__ConfiguredSKU__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ConfiguredSKUExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpqma_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScheduleExternalId__c</fullName>
        <formula>SBQQ__DiscountSchedule__r.cpqma_ExternalId__c</formula>
        <label>ScheduleExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>